--- a/Client.html
+++ b/Client.html
@@ -36,12 +36,12 @@
     #propertiesInputForm > div{
         display: flex;
         flex-direction: row;
-        justify-content: space-evenly;
+        justify-content: space-between;
     }
 
     input {
         margin: 5px;
-        width: 200px;
+        width: 220px;
         box-shadow: inset 2px 2px 5px #babecc, inset -5px -5px 10px #fff;
         border-radius: 30px;
         border: 0;
@@ -94,7 +94,7 @@
     }
 
     #websocketMessages {
-        width: 98%;
+        width: 97%;
         height: 100px;
         overflow-x: hidden;
         overflow-y: scroll;
@@ -108,6 +108,7 @@
         padding-top: 10px;
         color: #676767;
         font-size: 13px;
+        margin-left: 5px;
     }
 
     #websocketMessages::-webkit-scrollbar {
