--- a/Client.html
+++ b/Client.html
@@ -310,8 +310,8 @@
             <span class="propertySectionTitle">Pre Roast Bean Data</span>
             <div>
                 <input type="text" id="beanType" placeholder="Bean Type" title="Bean Type" oninput="roastProfile.setBeanType(event.target.value)" />
-                <input type="number" placeholder="Moisture Content (%)" title="Moisture Content (%)" oninput="roastProfile.setMoistureContent(event.target.value)" />
-                <input type="number" placeholder='Bean Screen Size (1/64")' title='Bean Screen Size (1/64")' oninput="roastProfile.setBeanScreenSize(event.target.value)" />
+                <input type="number" id="moistureContent" placeholder="Moisture Content (%)" title="Moisture Content (%)" oninput="roastProfile.setMoistureContent(event.target.value)" />
+                <input type="number" id="beanScreenSize" placeholder='Bean Screen Size (1/64")' title='Bean Screen Size (1/64")' oninput="roastProfile.setBeanScreenSize(event.target.value)" />
             </div>
             <div>
                 <input type="number" id="beanWeight" placeholder="Bean Weight (g)" title="Bean Weight (g)" oninput="roastProfile.setWeight(event.target.value)" />
@@ -769,6 +769,7 @@
                         '#drumSettings': this.#drumSettings,
                         '#beanTemperatures': this.#beanTemperatures,
                         '#airTemperatures': this.#airTemperatures,
+                        '#exhaustTemperatures': this.#exhaustTemperatures,
                         '#name': this.#name,
                         '#date': this.#date,
                         '#beanType': this.#beanType,
@@ -790,7 +791,47 @@
             parse(s) {
                 var j = JSON.parse(s);
 
+                this.#startTime = j['#startTime'];
+                this.#chargeTime = j['#chargeTime'];
+                this.#dryEndTime = j['#dryEndTime'];
+                this.#firstCrackStartTime = j['#firstCrackStartTime'];
+                this.#firstCrackEndTime = j['#firstCrackEndTime'];
+                this.#secondCrackStartTime = j['#secondCrackStartTime'];
+                this.#secondCrackEndTime = j['#secondCrackEndTime'];
+                this.#stopTime = j['#stopTime'];
+                this.#fanSettings = j['#fanSettings'];
+                this.#heaterSettings = j['#heaterSettings'];
+                this.#drumSettings = j['#drumSettings'];
+                this.#beanTemperatures = j['#beanTemperatures'];
+                this.#airTemperatures = j['#airTemperatures'];
+                this.#exhaustTemperatures = j['#exhaustTemperatures'];
+                this.#name = j['#name'];
+                this.#date = new Date(j['#date']);
+                this.#beanType = j['#beanType'];
+                this.#moistureContent = j['#moistureContent'];
+                this.#beanScreenSize = j['#beanScreenSize'];
+                this.#weight = j['#weight'];
+                this.#volume = j['#volume'];
+                this.#density = j['#density'];
+                this.#endWeight = j['#endWeight'];
+                this.#endVolume = j['#endVolume'];
+                this.#endDensity = j['#endDensity'];
+                this.#ambientTemperature = j['#ambientTemperature'];
+                this.#ambientHumidity = j['#ambientHumidity'];
+                this.#ambientPressure = j['#ambientPressure'];
 
+                this.#updateDialog();
+
+                for (var i = 0; i < this.#beanTemperatures.length; ++i)
+                    this.#drawBeanTemperature(i, this.#beanTemperatures[i][0]);
+
+                this.#drawChargeEvent();
+                this.#drawDryEndEvent();
+                this.#drawFirstCrackStartEvent();
+                this.#drawFirstCrackEndEvent();
+                this.#drawSecondCrackStartEvent();
+                this.#drawSecondCrackEndEvent();
+                this.#drawStopEvent();
             }
 
             #prevROR = 0;
@@ -863,6 +904,52 @@
                 return deltaAUC;
             }
 
+            #updateDialog() {
+                if(this.#ambientTemperature != null)
+                    document.getElementById("ambientTemperature").value = this.#ambientTemperature;
+
+                if(this.#ambientHumidity != null)
+                    document.getElementById("ambientHumidity").value = this.#ambientHumidity;
+
+                if(this.#ambientPressure != null)
+                    document.getElementById("ambientPressure").value = this.#ambientPressure;
+
+                if (this.#date != null) {
+                    document.getElementById("roastDate").valueAsDate = this.#date;
+                    document.getElementById("roastTime").valueAsDate = this.#date;
+                }
+
+                if (this.#name != null) 
+                    document.getElementById("roastName").value = this.#name;
+
+                if (this.#beanType != null)
+                    document.getElementById("beanType").value = this.#beanType;
+
+                if (this.#moistureContent != null)
+                    document.getElementById("moistureContent").value = this.#moistureContent;
+
+                if (this.#beanScreenSize != null)
+                    document.getElementById("beanScreenSize").value = this.#beanScreenSize;
+
+                if (this.#weight != null)
+                    document.getElementById("beanWeight").value = this.#weight;
+
+                if (this.#volume != null)
+                    document.getElementById("beanVolume").value = this.#volume;
+
+                if (this.#density != null)
+                    document.getElementById("beanDensity").value = this.#density;
+
+                if (this.#endWeight != null)
+                    document.getElementById("endBeanWeight").value = this.#endWeight;
+
+                if (this.#endVolume != null)
+                    document.getElementById("endBeanVolume").value = this.#endVolume;
+
+                if (this.#endDensity != null)
+                    document.getElementById("endBeanDensity").value = this.#endDensity;
+            }
+
             setStart() {
                 if (this.#startTime == null) {
                     this.#startTime = performance.now();
@@ -872,64 +959,94 @@
                     this.#ambientHumidity = 50.0;
                     this.#ambientPressure = 1.0;
 
-                    document.getElementById("ambientTemperature").value = this.#ambientTemperature;
-                    document.getElementById("ambientHumidity").value = this.#ambientHumidity;
-                    document.getElementById("ambientPressure").value = this.#ambientPressure;
-
-                    document.getElementById("roastDate").valueAsDate = this.#date;
-                    document.getElementById("roastTime").valueAsDate = this.#date;
+                    this.#updateDialog();
 
                     //for dev purposes
                     dummyData(0);
                 }
             }
 
+            #drawChargeEvent() {
+                if (this.#chargeTime != null && this.#startTime != null) 
+                lineChart.drawEventLine((this.#chargeTime - this.#startTime) / 60000, "CHG");
+            }
+
             setCharge() {
                 if (this.#chargeTime == null && this.#startTime != null) {
                     this.#chargeTime = performance.now();
-                    lineChart.drawEventLine((this.#chargeTime - this.#startTime) / 60000, "CHG");
+                    this.#drawChargeEvent();
                 }
+            }
+
+            #drawDryEndEvent() {
+                if (this.#dryEndTime != null && this.#chargeTime != null)
+                lineChart.drawEventLine((this.#dryEndTime - this.#startTime) / 60000, "DE");
             }
 
             setDryEnd() {
                 if (this.#dryEndTime == null && this.#chargeTime != null) {
                     this.#dryEndTime = performance.now();
-                    lineChart.drawEventLine((this.#dryEndTime - this.#startTime) / 60000, "DE");
+                    this.#drawDryEndEvent();
                 }
+            }
+
+            #drawFirstCrackStartEvent() {
+                if (this.#firstCrackStartTime != null && this.#dryEndTime != null)
+                lineChart.drawEventLine((this.#firstCrackStartTime - this.#startTime) / 60000, "FCS");
             }
 
             setFirstCrackStart() {
                 if (this.#firstCrackStartTime == null && this.#dryEndTime != null) {
                     this.#firstCrackStartTime = performance.now();
-                    lineChart.drawEventLine((this.#firstCrackStartTime - this.#startTime) / 60000, "FCS");
+                    this.#drawFirstCrackStartEvent();
                 }
+            }
+
+            #drawFirstCrackEndEvent() {
+                if (this.#firstCrackEndTime != null && this.#firstCrackStartTime != null)
+                lineChart.drawEventLine((this.#firstCrackEndTime - this.#startTime) / 60000, "FCE");
             }
 
             setFirstCrackEnd() {
                 if (this.#firstCrackEndTime == null && this.#firstCrackStartTime != null) {
                     this.#firstCrackEndTime = performance.now();
-                    lineChart.drawEventLine((this.#firstCrackEndTime - this.#startTime) / 60000, "FCE");
+                    this.#drawFirstCrackEndEvent();
                 }
+            }
+
+            #drawSecondCrackStartEvent() {
+                if (this.#secondCrackStartTime != null && this.#firstCrackEndTime != null)
+                lineChart.drawEventLine((this.#secondCrackStartTime - this.#startTime) / 60000, "SCS");
             }
 
             setSecondCrackStart() {
                 if (this.#secondCrackStartTime == null && this.#firstCrackEndTime != null) {
                     this.#secondCrackStartTime = performance.now();
-                    lineChart.drawEventLine((this.#secondCrackStartTime - this.#startTime) / 60000, "SCS");
+                    this.#drawSecondCrackStartEvent();
                 }
+            }
+
+            #drawSecondCrackEndEvent() {
+                if (this.#secondCrackEndTime != null && this.#secondCrackStartTime != null)
+                lineChart.drawEventLine((this.#secondCrackEndTime - this.#startTime) / 60000, "SCE");
             }
 
             setSecondCrackEnd() {
                 if (this.#secondCrackEndTime == null && this.#secondCrackStartTime != null) {
                     this.#secondCrackEndTime = performance.now();
-                    lineChart.drawEventLine((this.#secondCrackEndTime - this.#startTime) / 60000, "SCE");
+                    this.#drawSecondCrackEndEvent();
                 }
+            }
+
+            #drawStopEvent() {
+                if (this.#stopTime != null && this.#startTime != null)
+                lineChart.drawEventLine((this.#stopTime - this.#startTime) / 60000, "STOP");
             }
 
             setStop() {
                 if (this.#stopTime == null && this.#startTime != null) {
                     this.#stopTime = performance.now();
-                    lineChart.drawEventLine((this.#stopTime - this.#startTime) / 60000, "STOP");
+                    this.#drawStopEvent();
                 }
             }
 
@@ -964,20 +1081,15 @@
             #maillardPhaseAUCSum = 0;
             #developmentPhaseAUCSum = 0;
             #coolingPhaseAUCSum = 0;
-            setBeanTemperature(temperature) {
-                if (this.#startTime == null) return;
 
-                var now = performance.now();
-
-                this.#beanTemperatures.push([now, temperature]);
-
-                var currTime = this.#beanTemperatures[this.#beanTemperatures.length - 1][0];
-                var currTemp = this.#beanTemperatures[this.#beanTemperatures.length - 1][1]
+            #drawBeanTemperature(index, now) {
+                var currTime = this.#beanTemperatures[index][0];
+                var currTemp = this.#beanTemperatures[index][1]
                 var prevTime = 0;
                 var prevTemp = 0;
-                if (this.#beanTemperatures.length > 1) {
-                    prevTime = this.#beanTemperatures[this.#beanTemperatures.length - 2][0];
-                    prevTemp = this.#beanTemperatures[this.#beanTemperatures.length - 2][1];
+                if (index > 1) {
+                    prevTime = this.#beanTemperatures[index - 1][0];
+                    prevTemp = this.#beanTemperatures[index - 1][1];
                     prevTime -= this.#startTime;
                 }
                 else {
@@ -1008,7 +1120,7 @@
                     var dryingPhaseTimeMin = dryingPhaseTime / 60;
                     document.getElementById("dryingPhaseTime").innerHTML = Math.floor(dryingPhaseTimeMin) + ":" + ((dryingPhaseTime) - Math.floor(dryingPhaseTimeMin) * 60).toFixed(1) + " " + dryingPhasePercentage.toFixed(1) + "%";
 
-                    if (this.#dryEndTime == null) {
+                    if (this.#dryEndTime == null || (now >= this.#chargeTime && now <= this.#dryEndTime)) {
                         this.#dryingPhaseCount++;
                         this.#dryingPhaseRORSum += ror;
                         this.#dryingPhaseAUCSum += deltaAUC;
@@ -1026,7 +1138,7 @@
                     var maillardPhaseTimeMin = maillardPhaseTime / 60;
                     document.getElementById("maillardPhaseTime").innerHTML = Math.floor(maillardPhaseTimeMin) + ":" + ((maillardPhaseTime) - Math.floor(maillardPhaseTimeMin) * 60).toFixed(1) + " " + maillardPhasePercentage.toFixed(1) + "%";
 
-                    if (this.#firstCrackStartTime == null) {
+                    if (this.#firstCrackStartTime == null || (now >= this.#dryEndTime && now <= this.#firstCrackStartTime)) {
                         this.#maillardPhaseCount++;
                         this.#maillardPhaseRORSum += ror;
                         this.#maillardPhaseAUCSum += deltaAUC;
@@ -1044,7 +1156,7 @@
                     var developmentPhaseTimeMin = developmentPhaseTime / 60;
                     document.getElementById("developmentPhaseTime").innerHTML = Math.floor(developmentPhaseTimeMin) + ":" + ((developmentPhaseTime) - Math.floor(developmentPhaseTimeMin) * 60).toFixed(1) + " " + developmentPhasePercentage.toFixed(1) + "%";
 
-                    if (this.#stopTime == null) {
+                    if (this.#stopTime == null || (now >= this.#firstCrackStartTime && now <= this.#stopTime)) {
                         this.#developmentPhaseCount++;
                         this.#developmentPhaseRORSum += ror;
                         this.#developmentPhaseAUCSum += deltaAUC;
@@ -1061,6 +1173,7 @@
                     var coolingPhaseTimeMin = coolingPhaseTime / 60;
                     document.getElementById("coolingPhaseTime").innerHTML = Math.floor(coolingPhaseTimeMin) + ":" + ((coolingPhaseTime) - Math.floor(coolingPhaseTimeMin) * 60).toFixed(1) + " " + coolingPhasePercentage.toFixed(1) + "%";
 
+                    if(now >= this.#stopTime)
                     {
                         this.#coolingPhaseCount++;
                         this.#coolingPhaseRORSum += ror;
@@ -1069,6 +1182,16 @@
                         document.getElementById("coolingPhaseStat").innerHTML = "ROR: " + (this.#coolingPhaseRORSum / this.#coolingPhaseCount).toFixed(1) + " AUC: " + (this.#coolingPhaseAUCSum).toFixed(1);
                     }
                 }
+            }
+
+            setBeanTemperature(temperature) {
+                if (this.#startTime == null) return;
+
+                var now = performance.now();
+
+                this.#beanTemperatures.push([now, temperature]);
+
+                this.#drawBeanTemperature(this.#beanTemperatures.length - 1, now);
             }
 
             setAirTemperature(temperature) {
@@ -1268,7 +1391,6 @@
                 var reader = new FileReader();
                 reader.readAsText(fileToLoad);
                 reader.onload = function (evt) {
-                    console.log(reader.result);
                     roastProfile = new RoastProfile();
                     roastProfile.parse(reader.result);
                 }
